--- a/api/game_configurations/loops.yaml
+++ b/api/game_configurations/loops.yaml
@@ -7,30 +7,54 @@ games:
   - external_id: for_loops_0
     title: Basic loops
     description: Write some basic for loops
+    prompt: placebolder
     status: active
     level_number: 0
+    blocks:
+      - text
+      - output
   - external_id: for_loop_1
     title: Advanced for loops
     description: Write some advanced for loops
+    prompt: placebolder
     status: active
     level_number: 1
+    blocks:
+      - text
+      - output
   - external_id: while_loops_0
     title: Basic while loops
     description: Write some basic while loops
+    prompt: placebolder
     status: active
     level_number: 2
+    blocks:
+      - text
+      - output
   - external_id: while_loops_1
     title: Advnaced while loops
     description: Write some advnaced while loops
+    prompt: placebolder
     status: active
     level_number: 3
+    blocks:
+      - text
+      - output
   - external_id: nested_loops
     title: Nested Loops
     description: Write loops within loops
+    prompt: placebolder
     status: active
     level_number: 4
+    blocks:
+      - text
+      - output
   - external_id: loop_equivalence
     title: Equivalent loops
     description: Turn for loops into while loops
+    prompt: placebolder
     status: active
     level_number: 5
+    blocks:
+      - text
+      - output
