--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "webpack-cli": "^3.3.9"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js --progress --colors --mode development",
+    "build:js": "webpack --config webpack.config.js --progress --colors --mode development",
     "watch:js": "webpack --config webpack.config.js --watch --mode development",
+    "build:css": "sass static/scss:static/css",
     "watch:css": "sass --watch static/scss:static/css"
   }
 }
