ISS-1 adding solution validation

--- a/api/game_configurations/conditionals.yaml
+++ b/api/game_configurations/conditionals.yaml
@@ -10,6 +10,8 @@ games:
     status: active
     prompt: placebolder
     level_number: 0
+    inputs: int
+    num_inputs: 10
     blocks:
       - text
       - output
@@ -19,24 +21,33 @@ games:
     prompt: placebolder
     status: active
     level_number: 1
+    inputs: int
+    num_inputs: 10
     blocks:
       - text
       - output
+      - input
   - external_id: if_else_if_else
     title: One more time now
     description: Else if
     prompt: placebolder
     status: active
     level_number: 2
+    inputs: int
+    num_inputs: 10
     blocks:
       - text
       - output
+      - input
   - external_id: switch
     title: Switch hitting
     prompt: placebolder
     description: Switch
     status: active
     level_number: 3
+    inputs: int
+    num_inputs: 10
     blocks:
       - text
       - output
+      - input
