--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "blockly": "^3.20191014.1",
     "jquery": "^3.4.1",
     "react": "^16.10.2",
@@ -11,6 +12,7 @@
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
+    "axios": "^0.19.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
@@ -18,6 +20,7 @@
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
     "fibers": "^4.0.1",
+    "js-cookie": "^2.2.1",
     "node-sass": "^4.12.0",
     "react-modal": "^3.10.1",
     "sass": "^1.23.0",
@@ -28,8 +31,9 @@
     "webpack-cli": "^3.3.9"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js --progress --colors --mode development",
+    "build:js": "webpack --config webpack.config.js --progress --colors --mode development",
     "watch:js": "webpack --config webpack.config.js --watch --mode development",
+    "build:css": "sass static/scss:static/css",
     "watch:css": "sass --watch static/scss:static/css"
   }
 }
