--- a/api/game_configurations/conditionals.yaml
+++ b/api/game_configurations/conditionals.yaml
@@ -15,23 +15,23 @@ games:
     prompt: >
       You can practice basic (if) condition statement with basic blocks.
       <br>
-      Yow will be given two integers (a, b), print value of addition [a + b]
+      Yow will be given two integers (a, b), print either 'greater' or 'less' based on if condition
       <ul>
         <li>The <strong>Inputs</strong> will give you two integers randomly generated.</li>
-        <li>You might want to use the first condition block from the category <strong>condition (if-else) </strong> </li>
-        <li>There are two plug-in sockets (if /do) in <strong>if</strong> block</li><br>
+        <li>You need to use one of condition blocks from the category <strong>condition (if-else) </strong> </li>
         <li>Instruction</li>
-        <ol>The <strong>logic_boolean[true/false]</strong> block can be plugged into input of <strong>if</strong></ol>
-        <ol>The <strong>output</strong> block can be plugged into input of <strong>do</strong></ol>
-        <ol>The <strong>number</strong> block can be plugged into input of the <strong>output</strong></ol>
-        <ol>You need to set the number of value which is the sum of two inputs </ol>
+        <ol>The <strong>logic_compare</strong> block can be plugged into input of <strong>if</strong></ol>
+        <ol>The <strong>output</strong> block can be plugged into input of <strong>do</strong> or <strong>else</strong></ol>
+        <ol>The <strong>text</strong> block can be plugged into input of the <strong>output</strong></ol>
+        <ol>You need to put 'greater' in the <strong>do</strong> & 'less' in the <strong>else</strong> </ol>
       </ul>
-      Given these blocks, print the addition of the two integers (a, b) provided as input values.
     blocks:
+      - input
       - output
       - condition
+      - text
       - math_number
-      - logic_boolean
+      - logic_compare
   - external_id: else
     title: What else is there?
     description: Throwing else into the mix
@@ -41,27 +41,26 @@ games:
     inputs: int
     num_inputs: 2
     prompt: >
-      You can practice another version of condition (if /else) based on your boolean value[true/false]
+      You can practice another version of condition (if /else) with boolean value [True/False]
       <br>
-      Yow will be given two integers (a, b), print value of subtraction [a - b] in <strong>else</strong> condition
+      Yow will be given two integers (a, b), print True/False based on <strong>if</strong> condition
       <ul>
         <li>The <strong>Inputs</strong> will give you two integers randomly generated.</li>
-        <li>There are three plug-in sockets (if-do-else) in <strong>if-else</strong> block</li>
-        <li>You might want to use the second condition block from the category <strong>condition (if-else) </strong> </li><br>
+        <li>You need to use one of condition blocks from the category <strong>condition (if-else) </strong> </li>
         <li>Instruction</li>
-        <ol>The <strong>logic_boolean[true/false]</strong> can be plugged in to input of <strong>if</strong></ol>
+        <ol>The <strong>logic_compare</strong> can be plugged in to input of <strong>if</strong></ol>
         <ol>The <strong>output</strong> block can be plugged into input of <strong>do</strong> or <strong>else</strong></ol>
-        <ol>The <strong>arithmetic</strong> block can be plugged into input of the <strong>output</strong></ol>
-        <ol>Two <strong>number</strong> blocks can be plugged into input of the <strong>arithmetic</strong></ol>
-        <ol>Try to change the value of boolean or operator(+,-,x,/,^) from the <strong>arithmetic</strong> block</ol>
-        <ol>You need to set the number of value which will be the difference of two input integers </ol>
+        <ol>The <strong>logic_boolean</strong> block can be plugged into input of the <strong>output</strong></ol>
+        <ol>Try to change the value of boolean according to <strong>if</strong> condition</ol>
+        <ol>You need to configure <strong>logic_compare</strong> to make a proper if condition </ol>
       </ul>
-      Given these blocks, from the <strong>else</strong>, print the subtraction of the two integers (a, b) provided as input values.
     blocks:
+      - input
       - output
       - condition
       - math_number
       - math_arithmetic
+      - logic_compare
       - logic_boolean
   - external_id: if_else_if_else
     title: One more time now
@@ -86,6 +85,7 @@ games:
       </ul>
     blocks:
       - text
+      - input
       - output
       - condition
       - logic_compare
