--- a/api/game_configurations/conditionals.yaml
+++ b/api/game_configurations/conditionals.yaml
@@ -8,46 +8,111 @@ games:
     title: Basic if statements
     description: Write some basic if statements
     status: active
-    prompt: placebolder
     level_number: 0
     inputs: int
-    num_inputs: 10
+    num_inputs: 3
+    prompt: >
+      You can practice (if) condition statement with basic blocks.
+      <br>
+      Yow will be given three integers (a, b, c), print only positive integers using multiple <strong>if</strong> conditions.
+      <ul>
+        <li>The <strong>Inputs</strong> will give you three random integers (can be positive or negative)</li>
+        <li>You need to use one of condition blocks from the category <strong>condition (if-else) </strong> </li>
+        <li>Instruction</li>
+        <ol>The <strong>logic_compare</strong> block can be plugged into input of <strong>if</strong></ol>
+        <ol>The <strong>output</strong> block can be plugged into input of <strong>do</strong> </ol>
+        <ol>The <strong>number</strong> blocks can be plugged into input of the <strong>output</strong> and <strong>logic_compare</strong></ol>
+        <ol> Tips: You might want to right-click on <strong>if</strong> block and choose <strong>Duplicate</strong>, and then put them together</ol>
+      </ul>
     blocks:
-      - text
+      - input
       - output
+      - condition
+      - logic_compare
+      - math_number
   - external_id: else
     title: What else is there?
     description: Throwing else into the mix
-    prompt: placebolder
     status: active
     level_number: 1
     inputs: int
-    num_inputs: 10
+    num_inputs: 1
+    prompt: >
+      You can make absolute function with <strong>if-else</strong> condition.
+      <br>
+      Yow will be given one integer (a), print the absolute value. for example, print 5 if -5, print 6 if 6.
+      <ul>
+        <li>The <strong>Inputs</strong> will give you one random integer (can be positive or negative) </li>
+        <li>You need to use one of condition blocks from the category <strong>condition (if-else) </strong> </li>
+        <li>Instruction</li>
+        <ol>The <strong>logic_compare</strong> can be plugged in to input of <strong>if</strong></ol>
+        <ol>The <strong>output</strong> block can be plugged into input of <strong>do</strong> or <strong>else</strong></ol>
+        <ol>The <strong>math_arithmetic</strong> block can be plugged into input of the <strong>output</strong></ol>
+        <ol>The <strong>number</strong> block can be plugged into input of the <strong>math_arithmetic / logic_compare</strong></ol>
+        <ol>Put a proper value in <strong>number</strong> blocks and change the operators accordingly</ol>
+      </ul>
     blocks:
-      - text
-      - output
       - input
+      - output
+      - condition
+      - math_number
+      - math_arithmetic
+      - logic_compare
+      - logic_boolean
   - external_id: if_else_if_else
     title: One more time now
     description: Else if
-    prompt: placebolder
     status: active
     level_number: 2
     inputs: int
-    num_inputs: 10
+    num_inputs: 4
+    prompt: >
+      You can practice another version of condition (if / else-if / else) based on your assembling blocks.
+      <br>
+      Yow will be given four integers (a, b, c, d)
+      <ul>
+        <li>The <strong>Inputs</strong> will give you four integers randomly generated.</li>
+        <li>There are five plug-in sockets (if-do-elseif-do-else) in <strong>if-elseif-else</strong> block</li>
+        <li>You might want to use the third condition block from the category <strong>condition (if-else) </strong> </li><br>
+        <li>Instruction</li>
+        <ol>In the <strong>if</strong> condition plugin, compare 1st(a) and 2nd(b) integers if a > b, then print sum(a+b) </ol>
+        <ol>If not, in the second <strong>else-if</strong> condition plugin, compare 3rd(c) and 4th(d) integers if c < d, then print sum(c+d) </ol>
+        <ol>If both conditions are not satisfied, print out 'No Answer'</ol>
+      </ul>
     blocks:
       - text
-      - output
       - input
-  - external_id: switch
-    title: Switch hitting
-    prompt: placebolder
-    description: Switch
+      - output
+      - condition
+      - logic_compare
+      - math_number
+      - math_arithmetic
+  - external_id: and_or
+    title: AND versus OR
+    description: what's difference between <strong>and</strong> vs. <strong>or</strong>
     status: active
-    level_number: 3
+    level_number: 4
     inputs: int
-    num_inputs: 10
+    num_inputs: 4
+    prompt: >
+      You can practice logic operator (AND / OR) with if-else conditional block.
+      <br>
+      Yow will be given four integers (a, b, c, d), and need to print out corresponding sentences according to the instruction
+      <ul>
+        <li>The <strong>Inputs</strong> will give you four integers randomly generated.</li>
+        <li>You might want to use the second condition block from the category <strong>condition (if-else) </strong> </li><br>
+        <li>Instruction</li>
+        <ol> given four integers (a, b, c, d), compare each pair of numbers (1) a > b  (2) c > b  </ol>
+        <ol> if both (1) AND (2) are true, print 'Both are true', or print 'Both are NOT true'  </ol>
+        <ol> if either (1) OR (2) are true, print 'One is true', or print 'Neither is true'  </ol>
+      </ul>
     blocks:
       - text
-      - output
       - input
+      - output
+      - condition
+      - logic_compare
+      - math_number
+      - math_arithmetic
+      - logic_operation
+
