--- a/api/game_configurations/lists.yaml
+++ b/api/game_configurations/lists.yaml
@@ -10,8 +10,8 @@ games:
     status: active
     level_number: 0
     inputs: list_pos_int
-    num_inputs: 4
-    list_input_site: 5
+    num_inputs: 1
+    list_input_size: 5
     prompt: >
       You can practice basic concept of list<br>
       <cite> In computer science, an array data structure, or simply an <strong>array</strong> or <strong>list</strong>, is a data structure consisting of a collection of elements (values or variables), 
@@ -19,7 +19,7 @@ games:
       <br> <br>
       <ul>
         <li>Instruction</li> 
-        <ol> Yow will be given a set of integers. Print out sum of integers and finish when flows meets negative integer<br>
+        <ol> Yow will be given a set of integers. Print out sum of integers<br>
         </ol>
       </ul>
     blocks:
@@ -33,17 +33,14 @@ games:
       - logic_compare
       - logic_boolean
       - controls_forEach
-      - lists_create_with
-      - controls_flow_statements
   - external_id: list_index
     title: List with index
-    description: Practice list with index
+    description: Find the index for a maxmum number
     status: active
     level_number: 1
-    inputs: int
-    num_inputs: 2
-    list: 3
-    list_pos_int: 3
+    inputs: list_pos_int
+    num_inputs: 1
+    list_input_size: 5
     prompt: >
       You can practice basic concept of list<br>
       <cite> In computer science, many data structures (such as list, an associative array, map, symbol table, or dictionary) 
@@ -54,27 +51,29 @@ games:
       because you need to frequently search values based on the key or index  <br>
       <ul>
         <li>Instruction</li> 
-        <ol> You will be given a set of integers. You need to find out the value of 2nd index</ol>
+        <ol> In most programming languages, index starts with 0 and continue with 1,2,3, .. and so on. </ol>
+        <ol> You will be given a set of integers. Find out the maximum value of integer and return its index. </ol>
+        <ol> For example, you are given [41,19,49,17,85]. In this case 85 is the biggest number, so return 4 for its index</ol>
       </ul>
     blocks:
       - variable
       - text
       - output
       - input
+      - math_arithmetic
+      - logic_compare
       - controls_if
       - math_number
       - math_arithmetic
-      - lists_indexOf
-      - lists_create_with
-      - lists_getIndex
-      - lists_setIndex
+      - controls_forEach
   - external_id: list_sort
     title: Sort Lists
     description:  get the feel of sorting algorithm
     status: active
     level_number: 2
-    inputs: int
-    num_inputs: 2
+    inputs: list_pos_int
+    num_inputs: 1
+    list_input_size: 10
     prompt: >
       <cite> In computer science, a sorting algorithm is an algorithm that puts elements of a list in a certain order. <br>
       This algorithm is made up of a series of instructions that takes an array as input, 
@@ -86,26 +85,27 @@ games:
       when you use a specific block which already implemented with sorting algorithm.<br>
       <ul>
         <li>Instruction</li> 
-        <ol> Yow will be given a set of integers. Print out sorted integers<br>
+        <ol> Yow will be given a set of 10 integers. Print out only even numbers which are sorted in an ascending order</ol>
+        <ol> For example, you are given [14,44,46,97,36,84,22,7,24,88]. print [14,22,24,36,44,46,84,88] </ol>
       </ul>
     blocks:
       - variable
-      - text
       - output
       - input
+      - controls_forEach
+      - math_arithmetic
+      - logic_compare
+      - math_modulo
       - controls_if
       - math_number
-      - lists_length
-      - lists_isEmpty
-      - lists_create_with
       - lists_sort
   - external_id: fizz_buzz
     title: FizzBuzz Game
     description: Make a small FizzBuzz game
     status: active
     level_number: 3
-    inputs: int
-    num_inputs: 2
+    inputs: pos_int
+    num_inputs: 1
     prompt: >
       <cite>Fizz buzz is a group word game for children to teach them about division. <br>
       Players take turns to count incrementally, replacing any number divisible by three with the word "fizz", 
@@ -113,12 +113,11 @@ games:
       </cite>
       <ul>
         <ol>For example, a typical round of fizz buzz would start as follows: <br>
-        1, 2, Fizz, 4, Buzz, Fizz, 7, 8, Fizz, Buzz, 11, Fizz, 13, 14, Fizz Buzz, <br>
-        16, 17, Fizz, 19, Buzz, Fizz, 22, 23, Fizz, Buzz, 26, Fizz, 28, 29, Fizz Buzz, <br>
+        1, 2, Fizz, 4, Buzz, Fizz, 7, 8, Fizz, Buzz, 11, Fizz, 13, 14, FizzBuzz, <br>
+        16, 17, Fizz, 19, Buzz, Fizz, 22, 23, Fizz, Buzz, 26, Fizz, 28, 29, FizzBuzz, <br>
         31, 32, Fizz, 34, Buzz, Fizz, ...
         </ol>
       </ul>
-      <br>
       <ul>
         <li>Instruction</li> 
         <ol>Yow will be given one positive integer. <br>
@@ -134,4 +133,4 @@ games:
       - controls_for
       - math_number
       - logic_compare
-      - math_modulo
+      - math_modulo 
