--- a/api/game_configurations/lists.yaml
+++ b/api/game_configurations/lists.yaml
@@ -1,5 +1,5 @@
 external_id: lists
-title: Lists & Others
+title: Lists
 description: Learn a collection of data and others
 status: active
 module_number: 3
@@ -86,7 +86,7 @@ games:
       <ul>
         <li>Instruction</li> 
         <ol> Yow will be given a set of 10 integers. Print out only even numbers which are sorted in an ascending order</ol>
-        <ol> For example, you are given [14,44,46,97,36,84,22,7,24,88]. print [14,22,24,36,44,46,84,88] </ol>
+        <ol> For example, you are given [14,44,46,97,36,84,22,7,24,88]. print [14,22,24,36,44,46,84,88], There are no odd numbers (97,7) in sorted numbers </ol>
       </ul>
     blocks:
       - variable
@@ -99,29 +99,20 @@ games:
       - controls_if
       - math_number
       - lists_sort
-  - external_id: fizz_buzz
-    title: FizzBuzz Game
-    description: Make a small FizzBuzz game
+  - external_id: list_compare
+    title: Compare sums of two lists
+    description: Working on it..
     status: active
     level_number: 3
-    inputs: pos_int
-    num_inputs: 1
+    inputs: list_int
+    num_inputs: 2
+    list_input_size: 5
     prompt: >
-      <cite>Fizz buzz is a group word game for children to teach them about division. <br>
-      Players take turns to count incrementally, replacing any number divisible by three with the word "fizz", 
-      and any number divisible by five with the word "buzz". <strong>(Wikipedia) </strong>
+      <cite>Compare sums of two lists. <br>
       </cite>
-      <ul>
-        <ol>For example, a typical round of fizz buzz would start as follows: <br>
-        1, 2, Fizz, 4, Buzz, Fizz, 7, 8, Fizz, Buzz, 11, Fizz, 13, 14, FizzBuzz, <br>
-        16, 17, Fizz, 19, Buzz, Fizz, 22, 23, Fizz, Buzz, 26, Fizz, 28, 29, FizzBuzz, <br>
-        31, 32, Fizz, 34, Buzz, Fizz, ...
-        </ol>
-      </ul>
       <ul>
         <li>Instruction</li> 
         <ol>Yow will be given one positive integer. <br>
-         Make a FizzBuzz game with blocks, which is printing Fizz/Buzz accordingly up to the number<br>
         </ol>
       </ul>
     blocks:
@@ -131,6 +122,18 @@ games:
       - input
       - controls_if
       - controls_for
-      - math_number
-      - logic_compare
       - math_modulo 
+      - controls_forEach
+      - controls_for # for loop
+      - math_arithmetic
+      - logic_compare
+      - math_number
+      - math_on_list # sum of list
+      - lists_sort
+      - lists_setIndex
+      - lists_getIndex
+      - lists_length
+      - lists_indexOf
+      - lists_repeat
+      - lists_create_with
+      - lists_getSublist
