Created DB models, Summary page, and JS for badges (#44)
* push to remote

* updating badges

* updating badges

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ djangorestframework
 pyyaml
 django-webpack-loader
 django-model-utils
+pinax-points
 psycopg2
 pytest
 pytest-django
+git+https://github.com/pinax/pinax-badges.git
